--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
 <html>
-  <h1>Hello World<h1>
-</html>
+  <head>
+      <meta charset="utf-8">
+      <title>Tapenade Recipe</title>
+  </head>
