--- a/index.html
+++ b/index.html
@@ -2,5 +2,13 @@
 <html>
   <head>
       <meta charset="utf-8">
-      <title>Tapenade Recipe</title>
+      <title>Web Dev Welcome Page</title>
   </head>
+  <body>
+      <hi>Chapter 4</hi>
+      <ul>
+          <li><a href="bistro.html">Blackgoose Bistro</a></li>
+          <li><a href="tapenade-recipe.html">Tapenade Recipe</a></li>
+      </ul>
+  </body>
+</html>
