--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <title>Web Dev Welcome Page</title>
   </head>
   <body>
-      <hi>Chapter 4</hi>
+      <h1>Chapter 4</h1>
       <ul>
           <li><a href="bistro.html">Blackgoose Bistro</a></li>
           <li><a href="tapenade-recipe.html">Tapenade Recipe</a></li>
