--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <ul>
           <li><a href="bistro.html">Blackgoose Bistro</a></li>
           <li><a href="tapenade-recipe.html">Tapenade Recipe</a></li>
+          <li><a href="bistro-news.html">Bistro News</a></li>
       </ul>
   </body>
 </html>
