--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       <ul>
           <li><a href="bistro.html">Blackgoose Bistro</a></li>
           <li><a href="tapenade-recipe.html">Tapenade Recipe</a></li>
-          <li><a href="bistro-news.html">Bistro News</a></li>
+          
+      </ul>
+      <h1>Chapter 5</h1>
+      <li><a href="bistro-news.html">Bistro News</a></li>
+      <li><a href="bistro-news-2.html">Bistro News June</a></li>
   </body>
 </html>
