--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <h1>Chapter 4</h1>
       <ul>
           <li><a href="bistro.html">Blackgoose Bistro</a></li>
-          <li><a href="tapenade-recipe.html">Tapenade Recipe</a></li>
+          <li><a href="recipes/tapenade-recipe.html">Tapenade Recipe</a></li>
           
       </ul>
       <h1>Chapter 5</h1>
