--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
           
       </ul>
       <h1>Chapter 5</h1>
-      <li><a href="bistro-news.html">Bistro News</a></li>
-      <li><a href="bistro-news-2.html">Bistro News June</a></li>
+      <ul>
+        <li><a href="bistro-news.html">Bistro News</a></li>
+        <li><a href="bistro-news-2.html">Bistro News June</a></li>
+        <li><a href="jenskitchen/index.html">Jen's Kitchen</a></li>
+      </ul>
   </body>
 </html>
