--- a/jenskitchen/recipes/tapenade.html
+++ b/jenskitchen/recipes/tapenade.html
@@ -52,7 +52,8 @@ small {
 </ol>
 
 <p><a href="../index.html">[Back to the home page]</a></p>
-
+<p><a href="pasta/linguine.html">Linguine Recipe</a></p>
+<p><a href="http://allrecipes.com">Linguine Recipe</a></p>
 
 </body>
 </html>
