--- a/jenskitchen/recipes/pasta/couscous.html
+++ b/jenskitchen/recipes/pasta/couscous.html
@@ -49,7 +49,7 @@ small {
 </ol>
 
 <p><a href="../../index.html">[Back to the home page]</a></p>
-
+<p><a href="../salmon.html">Salmon Recipe</a></p>
 
 </body>
 </html>
