--- a/jenskitchen/recipes/tapenade.html
+++ b/jenskitchen/recipes/tapenade.html
@@ -53,7 +53,7 @@ small {
 
 <p><a href="../index.html">[Back to the home page]</a></p>
 <p><a href="pasta/linguine.html">Linguine Recipe</a></p>
-<p><a href="http://allrecipes.com">Linguine Recipe</a></p>
+<p><a href="http://allrecipes.com">Go to Allrecipes.com</a></p>
 
 </body>
 </html>
