--- a/ch4/recipes/tapenade-recipe.html
+++ b/ch4/recipes/tapenade-recipe.html
@@ -30,7 +30,7 @@
                  <li>Serve on thin toast rounds with goat cheese and fresh basil garnish
                     (optional).</li>
              </oi>
-             <p><a href="../index.html">Back to home page</a></p>
+             <p><a href="../../index.html">Back to home page</a></p>
  
     </body>
 </html>
