--- a/ch7/gallery/index.html
+++ b/ch7/gallery/index.html
@@ -46,7 +46,16 @@ People come from all over to enjoy our lovingly made burgers. We grind our own l
 <p><a href="fish.html"><img src="thumbnails/fish-200.jpg" alt="close-up of fish" width="200" height="200" ></a><br>
 Our chef works with local fisherman to pick the freshest the sea has to offer for our daily seafood special. Our Roast Cod Caponata with Roasted Potatoes is an old favorite with our regulars.</p>
 
+<h2>Fries</h2>
+<p><a href="fries.html"><img src="thumbnails/fries-200.jpg" alt="close-up of fries" width="200" height="200" ></a><br>
+Our fries are handcut from freshly dug up locally sourced spuds. We fry them to golden, crispy perfection and then shower them in crisp sea salt.</p>
 
-
+<h2>Chicken</h2>
+<p><a href="chicken.html"><img src="thumbnails/chicken-200.jpg" alt="close-up of chicken" width="200" height="200" ></a><br>
+ Personally slaughtered chicken on our premises fresh from a locally sourced coup. We fry them in a golden bath of hot oil and season them to culinary perfection.</p>
+ 
+ <h2>Taboulah</h2>
+<p><a href="taboulah.html"><img src="thumbnails/taboulah-200.jpg" alt="close-up of taboulah" width="200" height="200" ></a><br>
+ Our Mediterranean salad is as bland as desert sand and as tasteless as the finest Elmer's glue...JK lol :) It's really delicous</p>
 </body>
 </html>
