--- a/ch7/gallery/index.html
+++ b/ch7/gallery/index.html
@@ -55,7 +55,7 @@ Our fries are handcut from freshly dug up locally sourced spuds. We fry them to 
  Personally slaughtered chicken on our premises fresh from a locally sourced coup. We fry them in a golden bath of hot oil and season them to culinary perfection.</p>
  
  <h2>Taboulah</h2>
-<p><a href="taboulah.html"><img src="thumbnails/taboulah-200.jpg" alt="close-up of taboulah" width="200" height="200" ></a><br>
+<p><a href="tabouleh.html"><img src="thumbnails/tabouleh-200.jpg" alt="close-up of tabouleh" width="200" height="200" ></a><br>
  Our Mediterranean salad is as bland as desert sand and as tasteless as the finest Elmer's glue...JK lol :) It's really delicous</p>
 </body>
 </html>
