--- a/ch7/gallery/taboulah.html
+++ b/ch7/gallery/taboulah.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Gallery: Taboulah</title>
+<title>Gallery: Tabouleh</title>
 <style>
 body {
   background-color: #faf2e4;
@@ -30,8 +30,8 @@ h2 {
 
 <body>
 
-<h1>Gallery: Taboulah</h1>
-<p><img src="photos/taboulah-800.jpg" alt="close-up of taboulah" width="800" height="600"></p>
+<h1>Gallery: Tabouleh</h1>
+<p><img src="photos/tabouleh-800.jpg" alt="close-up of tabouleh" width="800" height="600"></p>
 <p><a href="index.html">[Back to Gallery]</a></p>
 </body>
 </html>
