--- a/index.html
+++ b/index.html
@@ -36,5 +36,11 @@
       <ul>
         <li><a href="ch9/pizza.html">Pizza Order Form</a></li>
       </ul>
+      <ul>
+      <h1>Chapter 10</h1>
+      <ul>
+        <li><a href="ch9/iframe.html">iframe example</a></li>
+        <li><a href="ch9/video.html">video example</a></li>
+      </ul>
   </body>
 </html>
