--- a/index.html
+++ b/index.html
@@ -41,5 +41,13 @@
         <li><a href="ch9/iframe.html">iframe example</a></li>
         <li><a href="ch9/video.html">video example</a></li>
       </ul>
+      <h1>Chapter 11</h1>
+      <ul>
+        <li><a href="ch11/cooking.html">Cooking Page</a></li>
+      </ul>
+      <h1>Chapter 12</h1>
+      <ul>
+        <li><a href="ch12/menu.html">Summer Menu</a></li>
+      </ul>
   </body>
 </html>
